--- a/src/app/layout/pages/restaurants/restaurants.component.html
+++ b/src/app/layout/pages/restaurants/restaurants.component.html
@@ -12,17 +12,17 @@
           <div class="restaurants-item-image rusty"></div>
           <h3>Le Rusty</h3>
         </div>
-        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d3254531-Reviews-Le_Surf_de_Josephine-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
-          <div class="restaurants-item-image surf-josephine"></div>
-          <h3>Le Surf de Joséphine</h3>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g187103-d7935249-Reviews-Petite_Nature-Rennes_Ille_et_Vilaine_Brittany.html')">
+          <div class="restaurants-item-image petite-nature"></div>
+          <h3>Petite Nature</h3>
         </div>
         <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d8380398-Reviews-Bistrot_de_la_Houle-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
           <div class="restaurants-item-image bistrot-houle"></div>
           <h3>Bistrot de la Houle</h3>
         </div>
-        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g1067529-d7381639-Reviews-La_Ville_Carree-Saint_Briac_sur_Mer_Ille_et_Vilaine_Brittany.html')">
-          <div class="restaurants-item-image ville-carree"></div>
-          <h3>La ville carrée</h3>
+        <div class="restaurants-item" (click)="openLink('https://www.tripadvisor.fr/Restaurant_Review-g2085616-d18206296-Reviews-Les_Sardines_a_la_Plage-Lancieux_Cotes_d_Armor_Brittany.html')">
+          <div class="restaurants-item-image sardines-plage"></div>
+          <h3>Les Sardines à la Plage</h3>
         </div>
       </div>
 </section>
