--- a/src/app/layout/pages/restaurants/restaurants.component.scss
+++ b/src/app/layout/pages/restaurants/restaurants.component.scss
@@ -30,14 +30,14 @@
         &.rusty {
           background-image: url("/assets/rusty-hover.jpg");
         }
-        &.surf-josephine {
-          background-image: url("/assets/surf-josephine-hover.jpg");
+        &.petite-nature {
+          background-image: url("/assets/petite-nature-hover.jpg");
         }
         &.bistrot-houle {
           background-image: url("/assets/bistrot-houle-hover.jpg");
         }
-        &.ville-carree {
-          background-image: url("/assets/ville-carree-hover.jpg");
+        &.sardines-plage {
+          background-image: url("/assets/sardines-plage-hover.jpg");
         }
         /* Set a specific height */
         height: calc(100% - 27px);
