--- a/src/app/layout/pages/covoiturages/covoiturages.component.html
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.html
@@ -16,7 +16,8 @@
             <p style="text-align: center">
               De {{userCovoiturage.start_location}} vers {{userCovoiturage.end_location}} <br/>
               Le {{userCovoiturage.start_date | date:"dd/MM/yyyy hh:mm"}} <br/><br/>
-              Pour plus de détails : {{ userCovoiturage.covoitureur }}
+              Pour plus de détails : {{ userCovoiturage.covoitureur }}<br/><br/>
+              <button (click)="deleteCovoiturage(userCovoiturage.id)" style="background-color: rgb(173, 0, 0); color: #fff; padding: 7px 15px">Supprimer</button>
             </p>
           </div>
         </div>
