--- a/src/app/layout/pages/covoiturages/covoiturages.component.scss
+++ b/src/app/layout/pages/covoiturages/covoiturages.component.scss
@@ -61,7 +61,7 @@
       padding-bottom: 20px;
     }
     .covoiturages-item {
-      min-height: 210px;
+      min-height: 229px;
       .bottom-title {
         display: flex;
         justify-content: space-between;
@@ -86,15 +86,18 @@
         text-align: left;
         font-size: 0.9em;
         padding: 5px 15px;
+        .top-actions-bar {
+          position: relative;
+          top: 0;
+          right: 0;
+          background-color: red;
+          width: 100%;
+        }
         select {
           width: 100%;
         }
         input {
           width: 98%;
-        }
-        .zmdi {
-          font-size: 30px;
-          color: #006338;
         }
         &.Lyon {
           background-image: url("/assets/lyon.jpg");
