--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -1,6 +1,10 @@
 <section>
   <div class="inner-border">
-    <h1>LOREM MES</h1>
+    <div class="images">
+      <img class="left" src="/assets/left-flower.JPG"/>
+      <h1>LOREM MES</h1>
+      <img class="right" src="/assets/right-flower.jpg"/>
+    </div>
     <p>
         Blabla mes couilles, trop lolilol very fun tu sauras pas ce que c'est le message
     </p>
