--- a/src/app/layout/pages/page-secrete/page-secrete.component.scss
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.scss
@@ -3,14 +3,23 @@ section {
   display: flex;
   justify-content: center;
   font-family: "EB Garamond", serif;
-  div {
+  div.inner-border {
     height: 85%;
     width: 85%;
     align-self: center;
     box-shadow: 0 0 0 1px #006338,0 0 0 7px white, 0 0 0 10px #006338;
+    .images {
+      img {
+        width: 125px;
+        height: 125px;
+      }
+      display: flex;
+      justify-content: space-between;
+    }
     h1 {
       text-align: center;
-      font-size: 40px;
+      font-size: 30px;
+      padding-top: 15px;
     }
     p {
       text-align: center;
