--- a/src/app/layout/pages/activites/activites.component.html
+++ b/src/app/layout/pages/activites/activites.component.html
@@ -1,3 +1,4 @@
+<p>A sample test</p>
 <section #test class="activites-section">
   <div class="carousel-navigation">
     <button *ngIf="this.carousel1active" class="carousel-navigation-button-left" (click)="displayCarousel4()">
