--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -2,14 +2,18 @@
   <div class="inner-border">
     <div class="images">
       <img class="left" src="/assets/left-flower.JPG"/>
-      <h1>LOREM MES</h1>
+      <h1>Félicitations</h1>
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
     <p>
-        Blabla mes couilles, trop lolilol very fun tu sauras pas ce que c'est le message
+        Tu as résolu la première partie de l'énigme.
+        Ce n'était que le début...
     </p>
     <p>
-        La putain de ses morts, wallah t'auras rien, c'est comme ça c'est comme ci
+        Souviens toi de ce qui t'a permis d'arriver 
+        jusqu'ici et tu auras une longueur d'avance 
+        pour la véritable énigme 
+        le jour du mariage
     </p>
     <p>
         Tu l'as cru, oui oui oui
