--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -5,18 +5,15 @@
       <h1>Félicitations</h1>
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
-    <p>
+    <p style="color: #B36700; font-family: "EB Garamond", serif">
         Tu as résolu la première partie de l'énigme.
         Ce n'était que le début...
     </p>
-    <p>
+    <p style="color: #B36700; font-family: "EB Garamond", serif">
         Souviens toi de ce qui t'a permis d'arriver 
         jusqu'ici et tu auras une longueur d'avance 
         pour la véritable énigme 
         le jour du mariage
-    </p>
-    <p>
-        Tu l'as cru, oui oui oui
     </p>
   </div>
 </section>
