--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -5,15 +5,15 @@
       <h1>Félicitations</h1>
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
-    <p style="color: #B36700; font-family: "EB Garamond", serif">
+    <p style="color: #B36700; font-family: 'EB Garamond', serif">
         Tu as résolu la première partie de l'énigme.
-        Ce n'était que le début...
+        <br/> Ce n'était que le début...
     </p>
-    <p style="color: #B36700; font-family: "EB Garamond", serif">
-        Souviens toi de ce qui t'a permis d'arriver 
-        jusqu'ici et tu auras une longueur d'avance 
-        pour la véritable énigme 
-        le jour du mariage
+    <p style="color: #B36700; font-family: 'EB Garamond', serif">
+        <br/> Souviens toi de ce qui t'a permis d'arriver 
+        <br/> jusqu'ici et tu auras une longueur d'avance 
+        <br/> pour la véritable énigme 
+        <br/> le jour du mariage
     </p>
   </div>
 </section>
