--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -2,7 +2,7 @@
   <div class="inner-border">
     <div class="images">
       <img class="left" src="/assets/left-flower.JPG"/>
-      <h1>Félicitations</h1>
+      <h1 style="color: #006338; font-family: 'Tangerine', serif">Félicitations</h1>
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
     <p style="color: #B36700; font-family: 'EB Garamond', serif">
