--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -2,14 +2,14 @@
   <div class="inner-border">
     <div class="images">
       <img class="left" src="/assets/left-flower.JPG"/>
-      <h1 style="color: #006338; font-family: 'Tangerine', serif">Félicitations</h1>
+      <h1 style="color: #006338; font-size: 32px;font-family: 'Tangerine', serif">Félicitations</h1>
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
-    <p style="color: #B36700; font-family: 'EB Garamond', serif">
+    <p style="color: #006338; font-size: 26px; font-family: 'EB Garamond', serif">
         Tu as résolu la première partie de l'énigme.
         <br/> Ce n'était que le début...
     </p>
-    <p style="color: #B36700; font-family: 'EB Garamond', serif">
+    <p style="color: #006338; font-size: 26px; font-family: 'EB Garamond', serif">
         <br/> Souviens toi de ce qui t'a permis d'arriver 
         <br/> jusqu'ici et tu auras une longueur d'avance 
         <br/> pour la véritable énigme 
