--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -6,14 +6,14 @@
       <img class="right" src="/assets/right-flower.jpg"/>
     </div>
     <p style="color: #006338; font-size: 26px; font-family: 'EB Garamond', serif">
-        Tu as résolu la première partie de l'énigme.
-        <br/> Ce n'était que le début...
+        Aa aa aaaaaa aa aaaaaaa aaaaaa aa a'aaaaaa.
+        <br/> Aa a'aaaaa aaa aa aaaaa...
     </p>
     <p style="color: #006338; font-size: 26px; font-family: 'EB Garamond', serif">
-        <br/> Souviens toi de ce qui t'a permis d'arriver 
-        <br/> jusqu'ici et tu auras une longueur d'avance 
-        <br/> pour la véritable énigme 
-        <br/> le jour du mariage
+        <br/> Aaaaaaaa aaa aa aa aaa a'a aaaaaa a'aaaaaaa 
+        <br/> aaaaa'aaa aa aa aaaaa aaa aaaaaaaa a'aaaaaa 
+        <br/> aaaa aa aaaaaaaaa aaaaaa 
+        <br/> aa aaaa aa aaaaaaa
     </p>
   </div>
 </section>
