--- a/src/app/layout/pages/page-secrete/page-secrete.component.scss
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.scss
@@ -12,6 +12,10 @@ section {
       img {
         width: 125px;
         height: 125px;
+        @media (max-width: 425px) {
+          width: 95px;
+          height: 95px;
+        }
       }
       display: flex;
       justify-content: space-between;
