--- a/src/app/layout/pages/page-secrete/page-secrete.component.html
+++ b/src/app/layout/pages/page-secrete/page-secrete.component.html
@@ -12,7 +12,8 @@
     <p style="color: #006338; font-size: 20px; font-family: 'EB Garamond', serif">
         <br/> Souviens toi de ce qui t'a permis d'arriver 
         <br/> jusqu'ici et tu auras une longueur d'avance 
-        <br/> pour la véritable énigme le jour du mariage. 
+        <br/> pour la véritable énigme le 
+        <br/> jour du mariage. 
     </p>
   </div>
 </section>
